--- a/Alicargo.Tests/Alicargo.Tests.csproj
+++ b/Alicargo.Tests/Alicargo.Tests.csproj
@@ -119,7 +119,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Services\Application\ApplicationPresenterTest.cs" />
     <Compile Include="Services\Application\ApplicationGrouperTests.cs" />
+    <Compile Include="Services\AirWaybill\AwbManagerTests.cs" />
+    <Compile Include="Services\AirWaybill\AwbPresenterTests.cs" />
+    <Compile Include="Services\Email\MailSenderTests.cs" />
+    <Compile Include="Services\StateServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
