--- a/Alicargo.BlackBox.Tests/packages.config
+++ b/Alicargo.BlackBox.Tests/packages.config
@@ -3,5 +3,13 @@
   <package id="AutoFixture" version="3.6.6" targetFramework="net45" />
   <package id="EmitMapper" version="1.0.0" targetFramework="net45" />
   <package id="FluentAssertions" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
 </packages>
