--- a/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
+++ b/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
@@ -61,7 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestContext.cs" />
+    <Compile Include="MockContainer.cs" />
     <Compile Include="WebTestContext.cs" />
   </ItemGroup>
   <ItemGroup>
