--- a/Alicargo.Tests/Alicargo.Tests.csproj
+++ b/Alicargo.Tests/Alicargo.Tests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Services\AirWaybill\AwbManagerTests.cs" />
     <Compile Include="Services\AirWaybill\AwbPresenterTests.cs" />
     <Compile Include="Services\Application\ApplicationListItemMapperTests.cs" />
+    <Compile Include="Services\Application\ApplicationListPresenterTests.cs" />
     <Compile Include="Services\Email\MailSenderTests.cs" />
     <Compile Include="Services\StateServiceTests.cs" />
   </ItemGroup>
