--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -254,7 +254,7 @@
     <Compile Include="Services\Abstract\IApplicationManager.cs" />
     <Compile Include="Services\Abstract\IApplicationPresenter.cs" />
     <Compile Include="Services\Abstract\IAuthenticationService.cs" />
-    <Compile Include="Services\Abstract\IAwbManager.cs" />
+    <Compile Include="Services\Abstract\IAwbUpdateManager.cs" />
     <Compile Include="Services\Abstract\IAwbPresenter.cs" />
     <Compile Include="Services\Abstract\ICarrierService.cs" />
     <Compile Include="Services\Abstract\IClientManager.cs" />
@@ -266,17 +266,23 @@
     <Compile Include="Services\Abstract\IStateService.cs" />
     <Compile Include="Services\Abstract\ITransitService.cs" />
     <Compile Include="Services\Abstract\IUserService.cs" />
+    <Compile Include="Services\AirWaybill\AwbManager.cs" />
+    <Compile Include="Services\Abstract\IAwbManager.cs" />
+    <Compile Include="Services\Application\ApplicationAwbManager.cs" />
     <Compile Include="Services\Application\ApplicationListItemMapper.cs" />
     <Compile Include="Services\Application\ApplicationListPresenter.cs" />
+    <Compile Include="Services\Abstract\IApplicationAwbManager.cs" />
     <Compile Include="Services\ClientPresenter.cs" />
     <Compile Include="Services\Contract\Recipient.cs" />
+    <Compile Include="Services\Email\ApplicationAwbManagerWithMailing.cs" />
     <Compile Include="Services\Email\ClientManagerWithMailing.cs" />
     <Compile Include="Services\Abstract\IClientPresenter.cs" />
+    <Compile Include="Services\Email\AwbManagerWithMailing.cs" />
     <Compile Include="Services\LocalizationService.cs" />
-    <Compile Include="Services\AirWaybill\AwbManager.cs" />
+    <Compile Include="Services\AirWaybill\AwbUpdateManager.cs" />
     <Compile Include="Services\Contract\Message.cs" />
     <Compile Include="Services\Email\ApplicationManagerWithMailing.cs" />
-    <Compile Include="Services\Email\AwbManagerWithMailing.cs" />
+    <Compile Include="Services\Email\AwbUpdateManagerWithMailing.cs" />
     <Compile Include="Services\Email\MailSender.cs" />
     <Compile Include="Services\Application\ApplicationManager.cs" />
     <Compile Include="Services\Application\ApplicationPresenter.cs" />
