--- a/Alicargo.Tests/Alicargo.Tests.csproj
+++ b/Alicargo.Tests/Alicargo.Tests.csproj
@@ -77,6 +77,7 @@
     </Compile>
     <Compile Include="Services\AirWaybill\AwbUpdateManagerTests.cs" />
     <Compile Include="Services\AirWaybill\AwbStateManagerTests.cs" />
+    <Compile Include="Services\AirWaybill\AwbGtdHelperTests.cs" />
     <Compile Include="Services\Application\ApplicationPresenterTest.cs" />
     <Compile Include="Services\Application\ApplicationGrouperTests.cs" />
     <Compile Include="Services\AirWaybill\AwbManagerTests.cs" />
