--- a/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
+++ b/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MockContainer.cs" />
+    <Compile Include="TestConstants.cs" />
     <Compile Include="WebTestContext.cs" />
   </ItemGroup>
   <ItemGroup>
