--- a/Alicargo.BlackBox.Tests/app.config
+++ b/Alicargo.BlackBox.Tests/app.config
@@ -15,7 +15,8 @@
     <add key="StateId-CargoOnTransit" value="12" />
   </appSettings>
   <connectionStrings>
-    <add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" />
+    <add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString"
+      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
   </connectionStrings>
   <userSettings>
     <Alicargo.BlackBox.Tests.Properties.Settings>
