--- a/Alicargo.BlackBox.Tests/Properties/Settings.settings
+++ b/Alicargo.BlackBox.Tests/Properties/Settings.settings
@@ -2,13 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Alicargo.BlackBox.Tests.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="MainConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True&lt;/ConnectionString&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True</Value>
-    </Setting>
     <Setting Name="BaseAddress" Type="System.String" Scope="User">
       <Value Profile="(Default)">http://localhost:1893/</Value>
     </Setting>
@@ -23,6 +16,13 @@
     </Setting>
     <Setting Name="ClientPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)">c1</Value>
+    </Setting>
+    <Setting Name="MainConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True&lt;/ConnectionString&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
