--- a/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
+++ b/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
@@ -135,6 +135,10 @@
       <Project>{e2f1a146-9076-4833-995e-084ac1b3eac7}</Project>
       <Name>Alicargo.Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Alicargo.Core\Alicargo.Core.csproj">
+      <Project>{577B60F9-32F7-4117-97DA-40743BFF4CA0}</Project>
+      <Name>Alicargo.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Alicargo.DataAccess\Alicargo.DataAccess.csproj">
       <Project>{37068536-3066-4877-91e0-05031d2c5ca3}</Project>
       <Name>Alicargo.DataAccess</Name>
