removed Twitter.Bootstrap 3
added Twitter.Bootstrap 2

--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -352,14 +352,15 @@
     <Content Include="Content\app\common.css" />
     <Content Include="Content\app\entity.css" />
     <Content Include="Content\app\kendo.css" />
-    <Content Include="Content\bootstrap\bootstrap-fileupload.css" />
-    <Content Include="Content\bootstrap\bootstrap-responsive.css" />
-    <Content Include="Content\bootstrap\bootstrap-responsive.min.css" />
-    <Content Include="Content\bootstrap\bootstrap-theme.css" />
-    <Content Include="Content\bootstrap\bootstrap-theme.min.css" />
-    <Content Include="Content\bootstrap\bootstrap.css" />
-    <Content Include="Content\bootstrap\bootstrap.min.css" />
-    <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\bootstrap\fileupload\bootstrap-fileupload.css" />
+    <Content Include="Content\bootstrap\css\bootstrap-responsive.css" />
+    <Content Include="Content\bootstrap\css\bootstrap-responsive.min.css" />
+    <Content Include="Content\bootstrap\css\bootstrap.css" />
+    <Content Include="Content\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Content\bootstrap\img\glyphicons-halflings-white.png" />
+    <Content Include="Content\bootstrap\img\glyphicons-halflings.png" />
+    <Content Include="Content\bootstrap\js\bootstrap.js" />
+    <Content Include="Content\bootstrap\js\bootstrap.min.js" />
     <Content Include="Content\kendo\2013.2.716\Black\editor.png" />
     <Content Include="Content\kendo\2013.2.716\Black\imagebrowser.png" />
     <Content Include="Content\kendo\2013.2.716\Black\loading-image.gif" />
@@ -576,21 +577,16 @@
     <Content Include="Scripts\app\it.js" />
     <Content Include="Scripts\app\CurrencyType.js" />
     <Content Include="Scripts\app\ru.js" />
-    <Content Include="Scripts\bootstrap-fileupload.js" />
-    <Content Include="Content\bootstrap\bootstrap-fileupload.min.css" />
-    <Content Include="Scripts\bootstrap-fileupload.min.js" />
+    <Content Include="Content\bootstrap\fileupload\bootstrap-fileupload.js" />
+    <Content Include="Content\bootstrap\fileupload\bootstrap-fileupload.min.css" />
+    <Content Include="Content\bootstrap\fileupload\bootstrap-fileupload.min.js" />
     <Content Include="Content\app\layout.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="App_Code\Helpers.cshtml" />
     <Content Include="Install\backup-db.ps1" />
     <Content Include="Install\init-db.ps1" />
     <Content Include="Install\backup-db-alicargo.ps1" />
-    <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.0.3.js" />
     <Content Include="Scripts\jquery-2.0.3.min.js" />
