--- a/Alicargo.Contracts/Alicargo.Contracts.csproj
+++ b/Alicargo.Contracts/Alicargo.Contracts.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Exceptions\UnexpectedStateException.cs" />
     <Compile Include="Helpers\IPasswordConverter.cs" />
     <Compile Include="Helpers\Order.cs" />
+    <Compile Include="Helpers\OrderHelper.cs" />
     <Compile Include="Helpers\OrderType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IApplicationRepository.cs" />
