--- a/Alicargo.Core/Alicargo.Core.csproj
+++ b/Alicargo.Core/Alicargo.Core.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Enums\DeliveryType.cs" />
     <Compile Include="Enums\MethodOfDelivery.cs" />
     <Compile Include="Enums\MethodOfTransit.cs" />
-    <Compile Include="Services\ExtensionHelper.cs" />
+    <Compile Include="Services\ExtensionsHelper.cs" />
     <Compile Include="Resources\Entities.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
