--- a/Alicargo.DataAccess.BlackBox.Tests/App.config
+++ b/Alicargo.DataAccess.BlackBox.Tests/App.config
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+  </configSections>
   <connectionStrings>
-    <add name="Alicargo.DataAccess.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" providerName="" />
+    <add name="Alicargo.DataAccess.BlackBox.Tests.Properties.Settings.MainConnectionString"
+      connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" />
   </connectionStrings>
 </configuration>
