--- a/Alicargo.Core/Alicargo.Core.csproj
+++ b/Alicargo.Core/Alicargo.Core.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Enums\DeliveryType.cs" />
     <Compile Include="Enums\MethodOfDelivery.cs" />
     <Compile Include="Enums\MethodOfTransit.cs" />
+    <Compile Include="Localization\CultureContext.cs" />
+    <Compile Include="Localization\ICultureContext.cs" />
     <Compile Include="Services\ExtensionsHelper.cs" />
     <Compile Include="Resources\Entities.Designer.cs">
       <AutoGen>True</AutoGen>
