--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -178,14 +178,14 @@
     <Compile Include="Controllers\AuthenticationController.cs" />
     <Compile Include="Controllers\BrockerController.cs" />
     <Compile Include="Controllers\SenderAwbController.cs" />
+    <Compile Include="DynamicScriptController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\PathConstants.cs" />
     <Compile Include="HomeController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="ModelBinders\SenderAwbModelBinder.cs" />
-    <Compile Include="ScriptController.generated.cs">
-      <DependentUpon>T4MVC.tt</DependentUpon>
-    </Compile>
     <Compile Include="SenderAwbController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
@@ -194,7 +194,7 @@
     </Compile>
     <Compile Include="Services\Abstract\IAwbStateManager.cs" />
     <Compile Include="Services\Abstract\IApplicationGrouper.cs" />
-    <Compile Include="Controllers\ScriptController.cs" />
+    <Compile Include="Controllers\DynamicScriptController.cs" />
     <Compile Include="Controllers\SenderController.cs" />
     <Compile Include="Controllers\TransitController.cs" />
     <Compile Include="Helpers\StyleRelativePathTransform.cs" />
@@ -235,7 +235,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Validation.resx</DependentUpon>
     </Compile>
-    <Compile Include="App_Start\BootstrapBundleConfig.cs" />
+    <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -1423,7 +1423,7 @@
     <Content Include="Views\Application\Details.cshtml" />
     <Content Include="Views\Transit\Edit.cshtml" />
     <Content Include="Views\AirWaybill\CargoIsCustomsClearedButton.cshtml" />
-    <Content Include="Views\Script\Index.cshtml" />
+    <None Include="Views\DynamicScript\Constants.cshtml" />
     <Content Include="Views\Brocker\AWB.cshtml" />
     <Content Include="Views\Brocker\EditorTemplates\BrockerAwbModel.cshtml" />
     <Content Include="Views\Shared\Message.cshtml" />
@@ -1437,6 +1437,7 @@
     <Content Include="Views\Authentication\Client.cshtml" />
     <Content Include="Views\SenderAwb\Edit.cshtml" />
     <Content Include="Views\SenderAwb\EditorTemplates\SenderAwbModel.cshtml" />
+    <Content Include="Views\AirWaybill\Columns.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
