--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Repositories\ApplicationRepository.cs" />
     <Compile Include="Repositories\ApplicationUpdateRepository.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
-    <Compile Include="Repositories\BrockerRepository.cs" />
+    <Compile Include="Repositories\BrokerRepository.cs" />
     <Compile Include="Repositories\CarrierRepository.cs" />
     <Compile Include="Repositories\ClientRepository.cs" />
     <Compile Include="Repositories\CountryRepository.cs" />
